test no-more-pvc branch checkout

--- a/.github/workflows/build-broker-service.yml
+++ b/.github/workflows/build-broker-service.yml
@@ -52,6 +52,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ecmwf-projects/cads-deployment
+          ref: no-more-pvc
           token: ${{ secrets.CADS_PAT }}
           path: .
 
