--- a/.github/workflows/build-cache-cleaner-service.yml
+++ b/.github/workflows/build-cache-cleaner-service.yml
@@ -54,6 +54,7 @@ jobs:
         uses: actions/checkout@v3   
         with:
           repository: ecmwf-projects/cads-deployment
+          ref: no-more-pvc
           token: ${{ secrets.CADS_PAT }}
           path: .       
         
