--- a/.github/workflows/build-cache-cleaner-service.yml
+++ b/.github/workflows/build-cache-cleaner-service.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/checkout@v3   
         with:
           repository: ecmwf-projects/cads-deployment
-          ref: remove-pvc-cache-cleaner
+          ref: no-pvc-cache-cleaner
           token: ${{ secrets.CADS_PAT }}
           path: .       
         
