--- a/.github/workflows/build-broker-service.yml
+++ b/.github/workflows/build-broker-service.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ecmwf-projects/cads-deployment
-          ref: no-more-pvc
+          ref: no-pvc-broker
           token: ${{ secrets.CADS_PAT }}
           path: .
 
