--- a/.github/workflows/build-catalogue-api-service.yml
+++ b/.github/workflows/build-catalogue-api-service.yml
@@ -52,6 +52,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ecmwf-projects/cads-deployment
+          ref: conda-debug
           token: ${{ secrets.CADS_PAT }}
           path: .
 
