--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -7,6 +7,7 @@ on:
         description: 'Release tag'
         required: true
         default: 'test'
+
 jobs:
 
   build_broker_service:
@@ -25,6 +26,26 @@ jobs:
         trigger_workflow: true
         wait_workflow: true
 
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-broker-service.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
+
   build_cache_cleaner_service:
     runs-on: ubuntu-latest
     steps:
@@ -40,6 +61,26 @@ jobs:
         propagate_failure: false
         trigger_workflow: true
         wait_workflow: true
+
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-cache-cleaner-service.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
 
   build_catalogue_api_service:
     runs-on: ubuntu-latest
@@ -57,6 +98,26 @@ jobs:
         trigger_workflow: true
         wait_workflow: true
 
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-catalogue-api-service.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
+
   build_catalogue_manager:
     runs-on: ubuntu-latest
     steps:
@@ -72,6 +133,26 @@ jobs:
         propagate_failure: false
         trigger_workflow: true
         wait_workflow: true
+
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-catalogue-manager.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
 
   build_extended_profiles:
     runs-on: ubuntu-latest
@@ -89,6 +170,26 @@ jobs:
         trigger_workflow: true
         wait_workflow: true
 
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-extended-profile.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
+
   build_processing_api_service:
     runs-on: ubuntu-latest
     steps:
@@ -104,6 +205,26 @@ jobs:
         propagate_failure: false
         trigger_workflow: true
         wait_workflow: true
+  
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-processing-api-service.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
 
   build_proxy:
     runs-on: ubuntu-latest
@@ -121,6 +242,26 @@ jobs:
         trigger_workflow: true
         wait_workflow: true
 
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-proxy.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
+
   build_webportal:
     runs-on: ubuntu-latest
     steps:
@@ -137,6 +278,26 @@ jobs:
         trigger_workflow: true
         wait_workflow: true
 
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-webportal.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
+
   build_worker:
     runs-on: ubuntu-latest
     steps:
@@ -152,3 +313,23 @@ jobs:
         propagate_failure: false
         trigger_workflow: true
         wait_workflow: true
+
+    - name: Check Workflow status with cURL
+      env:
+        WORKFLOW: build-worker.yml
+      run: |
+        API_REQUEST=$( \ 
+        curl \
+        -X GET \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{ secrets.CADS_PAT }}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/ecmwf-projects/cads-build-farm/actions/workflows/${{ env.WORKFLOW }}/runs)
+        STATUS=$(echo "$API_REQUEST" | jq -r ".workflow_runs[-1].conclusion") 
+        echo "$STATUS"
+        if [ "$STATUS" == "success" ]; then 
+          echo "${{ env.WORKFLOW }} succeeded"
+        else
+          echo "${{ env.WORKFLOW }} failed"
+          exit 1
+        fi
