--- a/.github/workflows/build-cache-cleaner-service.yml
+++ b/.github/workflows/build-cache-cleaner-service.yml
@@ -7,37 +7,32 @@ on:
         description: 'Image tag'
         required: true
         default: 'latest'
-  workflow_run:
-    workflows: 
-      - ecmwf-projects/cads-build-farm/build-images.yml
-    types: [requested]
 
 jobs:
-
- build-docker-image:
+  build-docker-image:
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-        
+
       - name: Setup harbor ca certificate from secret
         run: |
           ls /etc/docker
           sudo mkdir -p /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}" 
-          echo "${{ secrets.HARBOR_CERT }}" | sudo tee /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}"/ca.crt >/dev/null 
+          echo "${{ secrets.HARBOR_CERT }}" | sudo tee /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}"/ca.crt >/dev/null
       - name: Copy ca cert
         run: |
-          sudo cp /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}"/ca.crt /etc/ssl/certs/ca-certificates.crt          
-      - name: Login to harbor registry 
+          sudo cp /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}"/ca.crt /etc/ssl/certs/ca-certificates.crt
+      - name: Login to harbor registry
         uses: docker/login-action@v2
         with:
-          registry: "${{ secrets.HARBOR_IP }}" 
+          registry: '${{ secrets.HARBOR_IP }}'
           username: ${{ secrets.HARBOR_USER }}
-          password: ${{ secrets.HARBOR_TOKEN }}    
+          password: ${{ secrets.HARBOR_TOKEN }}
       - name: Setup docker context for buildx
         id: buildx-context
         run: docker context create builders || docker context use builders
-      
+
       - name: Create BuildKit Configuration
         run: |
           cat <<EOF > buildkitd.toml   
@@ -55,29 +50,29 @@ jobs:
           config: buildkitd.toml
 
       - name: Checkout cads-deployment repo
-        uses: actions/checkout@v3   
+        uses: actions/checkout@v3
         with:
           repository: ecmwf-projects/cads-deployment
           token: ${{ secrets.CADS_PAT }}
-          path: .       
-        
+          path: .
+
       - name: Checkout cacholote repo
         uses: actions/checkout@v3
         with:
           repository: ecmwf-projects/cacholote
           token: ${{ secrets.CADS_PAT }}
           path: ./docker/cacholote
-          
+
       - name: Checkout cads-worker repo
         uses: actions/checkout@v3
         with:
           repository: ecmwf-projects/cads-worker
           token: ${{ secrets.CADS_PAT }}
           path: ./docker/cads-worker
-          
+
       - name: Build and push
         uses: docker/build-push-action@v3
-        
+
         with:
           context: docker
           push: true
