--- a/.github/workflows/build-broker.yml
+++ b/.github/workflows/build-broker.yml
@@ -65,6 +65,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cacholote
+        ref: COPDS-941-sqlalchemy2
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cacholote
 
@@ -79,6 +80,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-broker
+        ref: COPDS-941-sqlalchemy2
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-broker
 
