--- a/.github/workflows/build-cache-cleaner.yml
+++ b/.github/workflows/build-cache-cleaner.yml
@@ -65,6 +65,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cacholote
+        ref: COPDS-941-sqlalchemy2
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cacholote
 
