--- a/.github/workflows/build-catalogue-api.yml
+++ b/.github/workflows/build-catalogue-api.yml
@@ -64,6 +64,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-catalogue
+        ref: COPDS-941-sqlalchemy2
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-catalogue
 
@@ -102,6 +103,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-catalogue-api-service
+        ref: COPDS-941-sqlalchemy
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-catalogue-api-service
 
