--- a/.github/workflows/build-profiles-api.yml
+++ b/.github/workflows/build-profiles-api.yml
@@ -79,6 +79,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-extended-profiles
+        ref: COPDS-941-sqlalchemy2
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-extended-profiles
 
