--- a/.github/workflows/build-worker.yml
+++ b/.github/workflows/build-worker.yml
@@ -69,6 +69,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cacholote
+        ref: pydantic-v2
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cacholote
 
