--- a/.github/workflows/build-worker.yml
+++ b/.github/workflows/build-worker.yml
@@ -84,6 +84,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-adaptors
+        ref: fix-environments
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-adaptors
 
