--- a/.github/workflows/build-csw-api.yml
+++ b/.github/workflows/build-csw-api.yml
@@ -19,14 +19,6 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
 
-    - name: Setup harbor ca certificate from secret
-      run: |
-        ls /etc/docker
-        sudo mkdir -p /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}"
-        echo "${{ secrets.HARBOR_CERT }}" | sudo tee /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}"/ca.crt >/dev/null
-    - name: Copy ca cert
-      run: |
-        sudo cp /etc/docker/certs.d/"${{ secrets.HARBOR_IP }}"/ca.crt /etc/ssl/certs/ca-certificates.crt
     - name: Login to harbor registry
       uses: docker/login-action@v2
       with:
@@ -64,5 +56,5 @@ jobs:
       with:
         context: ./pycsw-dynamic
         push: true
-        tags: ${{ secrets.HARBOR_IP }}/cads-dev-env/csw-api:${{ github.event.inputs.image_tag }}
+        tags: ${{ secrets.HARBOR_IP }}/cads/csw-api:${{ github.event.inputs.image_tag }}
         file: ./pycsw-dynamic/Dockerfile
