--- a/.github/workflows/build-catalogue-api.yml
+++ b/.github/workflows/build-catalogue-api.yml
@@ -115,5 +115,5 @@ jobs:
       with:
         context: docker
         push: true
-        tags: ${{ secrets.HARBOR_IP }}/cads/deployment/catalogue-api:${{ github.event.inputs.image_tag }}
+        tags: ${{ secrets.HARBOR_IP }}/cads/catalogue-api:${{ github.event.inputs.image_tag }}
         file: docker/catalogue-api/Dockerfile
