--- a/.github/workflows/build-broker.yml
+++ b/.github/workflows/build-broker.yml
@@ -58,12 +58,13 @@ jobs:
         token: ${{ secrets.CADS_PAT }}
         path: .
 
-    - name: Build from tags condition
-      uses: aarcangeli/load-dotenv@v1.0.0
+    - name: Set env variables from versions.env
       if: ${{ github.event.inputs.image_tag != 'latest' }}
-      with:
-        path: ./docker
-        filenames: versions.env
+      shell: bash
+      run: |
+        while read line; do
+          echo "$line" >> $GITHUB_ENV
+        done < ./docker/versions.env
 
     - name: Checkout cacholote repo
       uses: actions/checkout@v3
