--- a/.github/workflows/build-broker.yml
+++ b/.github/workflows/build-broker.yml
@@ -60,11 +60,11 @@ jobs:
 
     - name: Set env variables from versions.env
       if: ${{ github.event.inputs.image_tag != 'latest' }}
-      shell: bash
-      run: |
-        while read line; do
-          echo "$line" >> $GITHUB_ENV
-        done < ./docker/versions.env
+      uses: xom9ikk/dotenv@v2
+      with:
+        path: ./docker/versions
+        mode: development
+        load-mode: strict
 
     - name: Checkout cacholote repo
       uses: actions/checkout@v3
