--- a/.github/workflows/build-broker.yml
+++ b/.github/workflows/build-broker.yml
@@ -63,8 +63,7 @@ jobs:
       uses: xom9ikk/dotenv@v2
       with:
         path: ./docker/versions
-        mode: development
-        load-mode: strict
+        mode: test
 
     - name: Checkout cacholote repo
       uses: actions/checkout@v3
