--- a/.github/workflows/build-catalogue-api.yml
+++ b/.github/workflows/build-catalogue-api.yml
@@ -57,10 +57,18 @@ jobs:
         token: ${{ secrets.CADS_PAT }}
         path: .
 
+    - name: Set env variables from versions file
+      if: ${{ github.event.inputs.image_tag != 'latest' }}
+      uses: xom9ikk/dotenv@v2
+      with:
+        path: ./docker/versions
+        mode: test
+  
     - name: Checkout cads-catalogue repo
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-catalogue
+        ref: ${{ env.CADS_CATALOGUE }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-catalogue
 
@@ -100,6 +108,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ecmwf-projects/cads-common
+        ref: ${{ env.CADS_COMMON }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-common
 
@@ -107,6 +116,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-catalogue-api-service
+        ref: ${{ env.CADS_CATALOGUE_API_SERVICE }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-catalogue-api-service
 
