--- a/.github/workflows/build-dev-explorer.yml
+++ b/.github/workflows/build-dev-explorer.yml
@@ -57,10 +57,18 @@ jobs:
         token: ${{ secrets.CADS_PAT }}
         path: .
 
+    - name: Set env variables from versions file
+      if: ${{ github.event.inputs.image_tag != 'latest' }}
+      uses: xom9ikk/dotenv@v2
+      with:
+        path: ./docker/versions
+        mode: test
+  
     - name: Checkout cads-api-client repo
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-api-client
+        ref: ${{ env.CADS_COMMON }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-api-client
 
@@ -82,6 +90,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-catalogue
+        ref: ${{ env.CADS_CATALOGUE }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-catalogue
 
@@ -89,6 +98,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cacholote
+        ref: ${{ env.CACHOLOTE }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cacholote
 
@@ -96,6 +106,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ecmwf-projects/cads-common
+        ref: ${{ env.CADS_COMMON }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-common
 
@@ -103,6 +114,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-extended-profiles
+        ref: ${{ env.CADS_EXTENDED_PROFILES }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-extended-profiles
 
@@ -110,6 +122,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-worker
+        ref: ${{ env.CADS_WORKER }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-worker
 
