--- a/.github/workflows/build-profiles-api.yml
+++ b/.github/workflows/build-profiles-api.yml
@@ -58,6 +58,13 @@ jobs:
         token: ${{ secrets.CADS_PAT }}
         path: .
 
+    - name: Set env variables from versions file
+      if: ${{ github.event.inputs.image_tag != 'latest' }}
+      uses: xom9ikk/dotenv@v2
+      with:
+        path: ./docker/versions
+        mode: test
+  
     - name: Clone cads-licences repo
       uses: actions/checkout@v2
       with:
@@ -69,6 +76,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ecmwf-projects/cads-common
+        ref: ${{ env.CADS_COMMON }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-common
 
@@ -76,6 +84,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-extended-profiles
+        ref: ${{ env.CADS_EXTENDED_PROFILES }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-extended-profiles
 
