--- a/.github/workflows/build-worker.yml
+++ b/.github/workflows/build-worker.yml
@@ -57,10 +57,18 @@ jobs:
         token: ${{ secrets.CADS_PAT }}
         path: .
 
+    - name: Set env variables from versions file
+      if: ${{ github.event.inputs.image_tag != 'latest' }}
+      uses: xom9ikk/dotenv@v2
+      with:
+        path: ./docker/versions
+        mode: test
+  
     - name: Checkout cacholote repo
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cacholote
+        ref: ${{ env.CACHOLOTE }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cacholote
 
@@ -68,6 +76,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ecmwf-projects/cads-common
+        ref: ${{ env.CADS_COMMON }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-common
 
@@ -75,6 +84,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-adaptors
+        ref: ${{ env.CADS_ADAPTORS }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-adaptors
 
@@ -82,6 +92,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-obs-catalogue-manager
+        ref: ${{ env.CADS_OBS_CATALOGUE_MANAGER }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-obs-catalogue-manager
         submodules: recursive
@@ -90,6 +101,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-worker
+        ref: ${{ env.CADS_WORKER }}
         token: ${{ secrets.CADS_PAT }}
         path: ./docker/cads-worker
     - name: Build and push
