--- a/.github/workflows/build-retrieve-api.yml
+++ b/.github/workflows/build-retrieve-api.yml
@@ -1,4 +1,4 @@
-name: Build CADS image
+name: Build retrieve-api image
 
 on:
   workflow_dispatch:
@@ -7,20 +7,6 @@ on:
         description: 'Deployment branch'
         required: true
         default: 'main'
-      image:
-        type: choice
-        description: CADS image
-        options:
-        - broker
-        - cache-cleaner
-        - catalogue-api
-        - catalogue-manager
-        - dask-mars
-        - dev-explorer
-        - keycloak-db
-        - profiles-api
-        - retrieve-api
-        - worker
       build_mode:
         type: choice
         description: Build mode
@@ -36,54 +22,21 @@ on:
     - ecmwf-projects/cads-build-farm/build-images.yml
     types: [requested]
 
+
 jobs:
-  build-docker-image:
-    name: Build ${{github.event.inputs.image}}:${{ github.event.inputs.image_tag }} from ${{ github.event.inputs.build_mode }}
+  build_retrieve_api:
+    name: Build retrieve-api:${{ github.event.inputs.image_tag }} from ${{ github.event.inputs.build_mode }}
     runs-on: ubuntu-latest
     steps:
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-
-    - name: Login to harbor registry
-      uses: docker/login-action@v2
+    - name: Build retrieve-api image
+      uses: convictional/trigger-workflow-and-wait@v1.6.5
       with:
-        registry: '${{ secrets.HARBOR_IP }}'
-        username: ${{ secrets.HARBOR_USER }}
-        password: ${{ secrets.HARBOR_TOKEN }}
-    - name: Setup docker context for buildx
-      id: buildx-context
-      run: docker context create builders || docker context use builders
-
-    - name: Create BuildKit Configuration
-      run: |
-        cat <<EOF > buildkitd.toml
-        [registry."${{ secrets.HARBOR_IP }}"]
-          http = false
-          insecure = false
-          ca=["/etc/ssl/certs/ca-certificates.crt"]
-        EOF
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-      with:
-        version: v0.9.1
-        endpoint: builders
-        buildkitd-flags: --debug
-        config: buildkitd.toml
-
-    - name: Checkout cads-deployment repo
-      uses: actions/checkout@v3
-      with:
-        repository: ecmwf-projects/cads-deployment
-        ref: ${{ github.event.inputs.deployment_branch }}
-        token: ${{ secrets.CADS_PAT }}
-        path: .
-
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: docker
-        push: true
-        tags: ${{ secrets.HARBOR_IP }}/cads/${{ github.event.inputs.image }}:${{ github.event.inputs.image_tag }}
-        file: docker/${{ github.event.inputs.image }}/Dockerfile
-        build-args: |
-          MODE=${{ github.event.inputs.build_mode }}
+        owner: ecmwf-projects
+        repo: cads-build-farm
+        github_token: ${{ secrets.CADS_PAT }}
+        workflow_file_name: build-cads-image.yml
+        ref: main
+        client_payload: '{ "image": "retrieve-api", "image_tag": "${{ github.event.inputs.image_tag }}", "build_mode": "${{ github.event.inputs.build_mode }}", "deployment_branch": "${{ github.event.inputs.deployment_branch }}" }'
+        propagate_failure: false
+        trigger_workflow: true
+        wait_workflow: true
