--- a/.github/workflows/build-cads-image.yml
+++ b/.github/workflows/build-cads-image.yml
@@ -34,6 +34,7 @@ on:
   workflow_run:
     workflows:
     - ecmwf-projects/cads-build-farm/build-images.yml
+    - ecmwf-projects/cads-build-farm/build-broker.yml
     types: [requested]
 
 jobs:
