--- a/.github/workflows/build-broker.yml
+++ b/.github/workflows/build-broker.yml
@@ -23,7 +23,7 @@ jobs:
     name: Build broker:${{ github.event.inputs.image_tag }} from ${{ github.event.inputs.build_mode }}
     uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml
     with:
-      iamge: broker
+      image: broker
       deployment_branch: ${{ github.event.inputs.deployment_branch }}
       build_mode: ${{ github.event.inputs.build_mode }}
       image_tag: ${{ github.event.inputs.image_tag }}
