--- a/.github/workflows/build-broker.yml
+++ b/.github/workflows/build-broker.yml
@@ -17,17 +17,14 @@ on:
         description: 'Image tag'
         required: true
         default: 'latest'
-      image_name:
-        required: false
-        default: broker
   
 jobs:
   build_broker:
-    name: Build broker:${{ github.event.inputs.image_tag }} from ${{ github.event.inputs.build_mode }}
+    name: Build broker:${{ inputs.image_tag }} from ${{ inputs.build_mode }}
     uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@build-from-versions-file
     with:
       image_name: broker
-      deployment_branch: ${{ github.event.inputs.deployment_branch }}
-      build_mode: ${{ github.event.inputs.build_mode }}
-      image_tag: ${{ github.event.inputs.image_tag }}
+      deployment_branch: ${{ inputs.deployment_branch }}
+      build_mode: ${{ inputs.build_mode }}
+      image_tag: ${{ inputs.image_tag }}
     secrets: inherit
