--- a/.github/workflows/build-retrieve-api.yml
+++ b/.github/workflows/build-retrieve-api.yml
@@ -17,26 +17,14 @@ on:
         description: 'Image tag'
         required: true
         default: 'latest'
-  workflow_run:
-    workflows:
-    - ecmwf-projects/cads-build-farm/build-cads-image.yml
-    types: [requested]
-
-
+  
 jobs:
   build_retrieve_api:
-    name: Build retrieve-api:${{ github.event.inputs.image_tag }} from ${{ github.event.inputs.build_mode }}
-    runs-on: ubuntu-latest
-    steps:
-    - name: Build retrieve-api image
-      uses: convictional/trigger-workflow-and-wait@v1.6.5
-      with:
-        owner: ecmwf-projects
-        repo: cads-build-farm
-        github_token: ${{ secrets.CADS_PAT }}
-        workflow_file_name: build-cads-image.yml
-        ref: main
-        client_payload: '{ "image": "retrieve-api", "image_tag": "${{ github.event.inputs.image_tag }}", "build_mode": "${{ github.event.inputs.build_mode }}", "deployment_branch": "${{ github.event.inputs.deployment_branch }}" }'
-        propagate_failure: false
-        trigger_workflow: true
-        wait_workflow: true
+    name: Build retrieve-api:${{ inputs.image_tag }} from ${{ inputs.build_mode }}
+    uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@build-from-versions-file
+    with:
+      image_name: retrieve-api
+      deployment_branch: ${{ inputs.deployment_branch }}
+      build_mode: ${{ inputs.build_mode }}
+      image_tag: ${{ inputs.image_tag }}
+    secrets: inherit
