--- a/.github/workflows/build-cache-cleaner.yml
+++ b/.github/workflows/build-cache-cleaner.yml
@@ -17,6 +17,11 @@ on:
         description: 'Image tag'
         required: true
         default: 'latest'
+  workflow_run:
+    workflows:
+    - ecmwf-projects/cads-build-farm/build-images.yml
+    types: [requested]
+      
   
 jobs:
   build_cache_cleaner:
