--- a/.github/workflows/build-catalogue-api.yml
+++ b/.github/workflows/build-catalogue-api.yml
@@ -17,7 +17,11 @@ on:
         description: 'Image tag'
         required: true
         default: 'latest'
-  
+  workflow_run:
+    workflows:
+    - ecmwf-projects/cads-build-farm/build-images.yml
+    types: [requested]
+      
 jobs:
   build_catalogue_api:
     name: Build catalogue-api:${{ inputs.image_tag }} from ${{ inputs.build_mode }}
